--- a/.github/workflows/ssu-aad-ephemeral-uri-updater-build.yml
+++ b/.github/workflows/ssu-aad-ephemeral-uri-updater-build.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-      - uses: dfds/ssu-apps/.github/actions/build_push_container_ecr@master
+      - uses: ./.github/actions/build_push_container_ecr
         name: Build & push container
         id: build_push_container
         with:
