--- a/chart/templates/middleware.yaml
+++ b/chart/templates/middleware.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.ingress.prefixMiddleware.enabled -}}
 {{- $fullName := include "ssu-aad-ephemeral-uri-updater.fullname" . -}}
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: {{ $fullName }}-prefix
